@@ -16,6 +16,7 @@ opsi-winst/opsi-script (4.12.3.4) experimental; urgency=low
   * new string function replaceOpsiConstants(<string>) : <string>
   * osparser: create cmd64.exe in execshellcall and execdosbatch:
       create also cmd64.exe.mui files
+  * new boolean function isPingReachable(<target host>) : bool
 
 -- Detlef Oertel <d.oertel@uib.de>  Fri, 27 Dec 2019:15:00:00 +0200
 
